# example-fastapi-project

./: .env.example  .env.production  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: main.yml  test.yml
app/: db.py  main.py
app/api/: birute.py  items.py
app/core/: config.py  db.py  logging.py
app/models/: item.py
app/services/: item_service.py
tests/: test_api.py
